reference data set generation for 5 coordinate sets

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !datavisualizer.py
 !requirements.txt
 !data_input_folder
+!reference_data_set_generation.py
 
 
 # Include specific directories or files (Example for 'src' folder)
