global output folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !data_transformation_datasci.py
 !datavisualizer.py
 !requirements.txt
-!data_input_folder
+!data_output_folder
 !reference_data_set_generation.py
 
 
