Added new function for calculation params given lon lat

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !data_output_folder
 !reference_data_set_generation.py
 !filtered_usa_points.csv
+!weather_params_at_coodinate
 
 
 # Include specific directories or files (Example for 'src' folder)
