--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 !backend_logic.py
 !app.py
 !reference_data_set.json
+!most_similar_point.py
 
 # Include specific directories or files (Example for 'src' folder)
 !src/
