Added back code to pull from API, Added weights for higher accuracy

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 !app.py
 !reference_data_set.json
 !most_similar_point.py
+!pull_satelliteData.py
 
 # Include specific directories or files (Example for 'src' folder)
 !src/
